edit 2nd paragraph

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <body>
 <h1>This is a heading</h1>
 <p>This is a paragraph</p>
+
+<p>Dinupa mottayaaa...dinupage dinithi motta naaaa...</p>
 </body>
 
 </html>
