--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <p>Dinupa mottayaaa...dinupage dinithi motta naaaa...</p>
 <p>I love you..dinupaaaaaa</p>
 <p>I'm DInithi Perera...i live in kadawatha...i'm 21 years old...</p>
+<p>My mothers name is nirmala sudarshani...</p>
 </body>
 
 </html>
