--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
+<!DOCTYPE html>
 <html>
-<tytle>HTML Tutoral</title>
+    <head>
+        <title>DA Wears</title>
+        <link rel="stylesheet" href="style.css">
+    
+    </head>
+    <body>
+        <header>
+            <h1> DA Clothing</h1>
+        </header>
+        <section class="banner">
+            <img src="images/banner.png" alt="banner">
+            <div class="welcome">
+                <h2>welcome To DA Clothings...</h2>
+            </div>
 
-<body>
-<h1>This is a heading</h1>
-<p>This is a paragraph</p>
+        </section>
 
-<p>Dinupa mottayaaa...dinupage dinithi motta naaaa...</p>
-<p>I love you..dinupaaaaaa</p>
-<p>I'm DInithi Perera...i live in kadawatha...i'm 21 years old...</p>
-</body>
+        <nav class="main-nav">
+            <ul>
+                <li> <a href="google.com" class="navig">Join The Club</a> </li>
+                <li><a href="facebook.com">Join To Our FaceBook Group</a></li>
+            </ul>
+        </nav>
 
+        <main>
+            <article>
+                <h1>It's Mee... Your DA Wears...</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut ullam vero enim accusamus minus quos dicta ut lauda
+                    ntium autem maiores? Laboriosam, ab! Ex atque quos quaerat dicta consectetur dolorem vero?</p>
+            </article>
+            <ul class="images">
+                <li><img src="images/thumb1.png" alt="Thumb"></li>
+                <li><img src="images/thumb2.png" alt="Thumb2"></li>
+            </ul>
+        </main>
+        
+    </body>
 </html>
