--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
             <h1> DA Clothing</h1>
         </header>
         <section class="banner">
-            <img src="images/banner.png" alt="banner">
+            <img src="images/dini.png"  alt="banner" class="img">
             <div class="welcome">
-                <h2>welcome To DA Clothings...</h2>
+                <h2 class="wel">Welcome To,</h2>
+                <h2 class="wel2"> DA Clothings..</h2>
             </div>
 
         </section>
