header and banner

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     </head>
     <body>
         <header>
-            <h1> DA Clothing</h1>
+            <h1> DA Clothings</h1>
         </header>
         <section class="banner">
-            <img src="images/dini.png"  alt="banner" class="img">
+            <img src="images/dinii.jpg"  alt="banner" class="img">
             <div class="welcome">
                 <h2 class="wel">Welcome To,</h2>
-                <h2 class="wel2"> DA Clothings..</h2>
+                <h2 class="wel2"> DA Clothings...</h2>
             </div>
 
         </section>
@@ -22,8 +22,9 @@
 
         <nav class="main-nav">
             <ul>
-                <li> <a href="google.com" class="navig">Join The Club</a> </li>
-                <li><a href="facebook.com">Join To Our FaceBook Group</a></li>
+                <li> <a href="google.com" class="navig">Face Book</a> </li>
+                <li><a href="facebook.com">Instergram</a></li>
+                <li><a href="instergram.com">Gmail</a></li>
             </ul>
         </nav>
 
