--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <h1> DA Clothings</h1>
         </header>
         <section class="banner">
-            <img src="images/dinii.jpg"  alt="banner" class="img">
+            <img src="images/banner.jpg"  alt="banner" class="img">
             <div class="welcome">
                 <h2 class="wel">Welcome To,</h2>
                 <h2 class="wel2"> DA Clothings...</h2>
@@ -25,6 +25,7 @@
                 <li> <a href="google.com" class="navig">Face Book</a> </li>
                 <li><a href="facebook.com">Instergram</a></li>
                 <li><a href="instergram.com">Gmail</a></li>
+                <li><a href="whatsapp.com">whatsapp</a></li>
             </ul>
         </nav>
 
@@ -32,13 +33,15 @@
 
         <main>
             <article>
-                <h1>It's Mee... Your DA Wears...</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut ullam vero enim accusamus minus quos dicta ut lauda
+                <h2>It's Mee,</h2><h1>Your DA Wears!</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas provident quidem cum ea exercitationem necessitatibus iste soluta nemo. Incidunt inventore ipsum soluta minus vero unde neque dolorem, qui sint quaerat.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ducimus autem sunt nesciunt atque neque in, unde rerum delectus natus, nostrum magni cupiditate pariatur animi placeat culpa voluptatum? Asperiores, ducimus?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut ullam vero enim accusamus minus quos dicta ut lauda
                     ntium autem maiores? Laboriosam, ab! Ex atque quos quaerat dicta consectetur dolorem vero?</p>
             </article>
             <ul class="images">
-                <li><img src="images/thumb1.png" alt="Thumb"></li>
-                <li><img src="images/thumb2.png" alt="Thumb2"></li>
+                <li><img src="images/banner2.png" alt="Thumb"></li>
+                <li><img src="images/dini.png" alt="Thumb2"></li>
             </ul>
         </main>
 
